# kleeneup

./: .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
kleeneup/: __init__.py  __main__.py  control.py  finite_automaton.py  gui.py  jayzon.py  regular_expression.py  regular_grammar.py  util.py
kleeneup/cli/: __main__.py  fa.py  re.py  rg.py  util.py
kleeneup/forms/: automata_test_dialog.ui  export_dialog.ui  grammar_out_dialog.ui  input_dialog.ui  kleeneup.ui
tests/: __init__.py  test_finite_automaton.py  test_regular_expression.py  test_regular_grammar.py  test_util.py
