[tool.poetry]
name = "kleeneup"
version = "0.1.0"
description = ""
authors = ["cauebs <cauebs@pm.me>", "caiopo <caiopoliveira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
lark-parser = "^0.6.4"
cleo = "^0.6.8"

[tool.poetry.dev-dependencies]
pytest = "^3.8"
mypy = "^0.630.0"
